@@ -25,7 +25,49 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|BaseConfigurationNodeVisitor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|ConfigurationNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|DataMap
 import|;
 end_import
 
@@ -196,9 +238,11 @@ block|{
 name|ValidationResult
 name|getValidationResult
 parameter_list|(
-name|List
+name|Collection
 argument_list|<
-name|Object
+name|?
+extends|extends
+name|ConfigurationNode
 argument_list|>
 name|classes
 parameter_list|)
@@ -212,48 +256,82 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|Object
-name|classObj
+name|ConfigurationNode
+name|configurationNode
 range|:
 name|classes
 control|)
 block|{
-if|if
-condition|(
-name|classObj
-operator|instanceof
+name|configurationNode
+operator|.
+name|acceptVisitor
+argument_list|(
+operator|new
+name|BaseConfigurationNodeVisitor
+argument_list|<
+name|Void
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|visitObjEntity
+parameter_list|(
 name|ObjEntity
-condition|)
+name|entity
+parameter_list|)
 block|{
 name|validateEntity
 argument_list|(
 name|validationResult
 argument_list|,
-operator|(
-name|ObjEntity
-operator|)
-name|classObj
+name|entity
 argument_list|)
 expr_stmt|;
+return|return
+literal|null
+return|;
 block|}
-if|else if
-condition|(
-name|classObj
-operator|instanceof
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|visitEmbeddable
+parameter_list|(
 name|Embeddable
-condition|)
+name|embeddable
+parameter_list|)
 block|{
 name|validateEmbeddable
 argument_list|(
 name|validationResult
 argument_list|,
-operator|(
-name|Embeddable
-operator|)
-name|classObj
+name|embeddable
 argument_list|)
 expr_stmt|;
+return|return
+literal|null
+return|;
 block|}
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|visitDataMap
+parameter_list|(
+name|DataMap
+name|dataMap
+parameter_list|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 name|validationResult
