@@ -27,6 +27,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|configuration
+operator|.
+name|ConfigurationNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|map
 operator|.
 name|DataMap
@@ -232,6 +246,16 @@ operator|.
 name|awt
 operator|.
 name|Component
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
 import|;
 end_import
 
@@ -701,9 +725,11 @@ specifier|public
 name|void
 name|validate
 parameter_list|(
-name|List
+name|Collection
 argument_list|<
-name|Object
+name|?
+extends|extends
+name|ConfigurationNode
 argument_list|>
 name|classes
 parameter_list|)
