@@ -81,16 +81,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Collection
 import|;
 end_import
@@ -101,7 +91,27 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
+name|Comparator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|TreeSet
 import|;
 end_import
 
@@ -162,6 +172,48 @@ operator|.
 name|stream
 operator|.
 name|Collectors
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|BaseConfigurationNodeVisitor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|ConfigurationNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|ConfigurationNodeVisitor
 import|;
 end_import
 
@@ -558,9 +610,9 @@ name|projectController
 decl_stmt|;
 specifier|protected
 specifier|final
-name|List
+name|Set
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|classes
 decl_stmt|;
@@ -676,9 +728,38 @@ operator|.
 name|classes
 operator|=
 operator|new
-name|ArrayList
+name|TreeSet
 argument_list|<>
-argument_list|()
+argument_list|(
+name|Comparator
+operator|.
+name|comparing
+argument_list|(
+parameter_list|(
+name|ConfigurationNode
+name|o
+parameter_list|)
+lambda|->
+name|o
+operator|.
+name|acceptVisitor
+argument_list|(
+name|TYPE_GETTER
+argument_list|)
+argument_list|)
+operator|.
+name|thenComparing
+argument_list|(
+name|o
+lambda|->
+name|o
+operator|.
+name|acceptVisitor
+argument_list|(
+name|NAME_GETTER
+argument_list|)
+argument_list|)
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
@@ -908,73 +989,7 @@ argument_list|)
 expr_stmt|;
 name|Predicate
 argument_list|<
-name|Object
-argument_list|>
-name|defaultPredicate
-init|=
-name|object
-lambda|->
-block|{
-if|if
-condition|(
-name|object
-operator|instanceof
-name|ObjEntity
-condition|)
-block|{
-return|return
-name|classesSelector
-operator|.
-name|getProblem
-argument_list|(
-operator|(
-operator|(
-name|ObjEntity
-operator|)
-name|object
-operator|)
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-operator|==
-literal|null
-return|;
-block|}
-if|if
-condition|(
-name|object
-operator|instanceof
-name|Embeddable
-condition|)
-block|{
-return|return
-name|classesSelector
-operator|.
-name|getProblem
-argument_list|(
-operator|(
-operator|(
-name|Embeddable
-operator|)
-name|object
-operator|)
-operator|.
-name|getClassName
-argument_list|()
-argument_list|)
-operator|==
-literal|null
-return|;
-block|}
-return|return
-literal|false
-return|;
-block|}
-decl_stmt|;
-name|Predicate
-argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|predicate
 init|=
@@ -1469,9 +1484,9 @@ argument_list|)
 expr_stmt|;
 block|}
 specifier|public
-name|List
+name|Set
 argument_list|<
-name|Object
+name|?
 argument_list|>
 name|getClasses
 parameter_list|()
@@ -1486,7 +1501,7 @@ name|updateSelection
 parameter_list|(
 name|Predicate
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|predicate
 parameter_list|)
@@ -1505,7 +1520,7 @@ argument_list|)
 decl_stmt|;
 for|for
 control|(
-name|Object
+name|ConfigurationNode
 name|classObj
 range|:
 name|classes
@@ -2292,8 +2307,225 @@ return|return
 name|cgenConfiguration
 return|;
 block|}
+specifier|private
+specifier|final
+name|Predicate
+argument_list|<
+name|ConfigurationNode
+argument_list|>
+name|defaultPredicate
+init|=
+name|o
+lambda|->
+name|o
+operator|.
+name|acceptVisitor
+argument_list|(
+operator|new
+name|BaseConfigurationNodeVisitor
+argument_list|<
+name|Boolean
+argument_list|>
+argument_list|()
+block|{
+block_content|@Override         public Boolean visitDataMap(DataMap dataMap
+init|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Boolean
+name|visitObjEntity
+parameter_list|(
+name|ObjEntity
+name|entity
+parameter_list|)
+block|{
+return|return
+name|classesSelector
+operator|.
+name|getProblem
+argument_list|(
+name|entity
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|==
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Boolean
+name|visitEmbeddable
+parameter_list|(
+name|Embeddable
+name|embeddable
+parameter_list|)
+block|{
+return|return
+name|classesSelector
+operator|.
+name|getProblem
+argument_list|(
+name|embeddable
+operator|.
+name|getClassName
+argument_list|()
+argument_list|)
+operator|==
+literal|null
+return|;
+block|}
 block|}
 end_class
 
+begin_empty_stmt
+unit|)
+empty_stmt|;
+end_empty_stmt
+
+begin_decl_stmt
+specifier|private
+specifier|static
+specifier|final
+name|ConfigurationNodeVisitor
+argument_list|<
+name|Integer
+argument_list|>
+name|TYPE_GETTER
+init|=
+operator|new
+name|BaseConfigurationNodeVisitor
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Integer
+name|visitDataMap
+parameter_list|(
+name|DataMap
+name|dataMap
+parameter_list|)
+block|{
+return|return
+literal|10
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Integer
+name|visitObjEntity
+parameter_list|(
+name|ObjEntity
+name|entity
+parameter_list|)
+block|{
+return|return
+literal|20
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Integer
+name|visitEmbeddable
+parameter_list|(
+name|Embeddable
+name|embeddable
+parameter_list|)
+block|{
+return|return
+literal|30
+return|;
+block|}
+block|}
+decl_stmt|;
+end_decl_stmt
+
+begin_decl_stmt
+specifier|private
+specifier|static
+specifier|final
+name|ConfigurationNodeVisitor
+argument_list|<
+name|String
+argument_list|>
+name|NAME_GETTER
+init|=
+operator|new
+name|BaseConfigurationNodeVisitor
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|String
+name|visitDataMap
+parameter_list|(
+name|DataMap
+name|dataMap
+parameter_list|)
+block|{
+return|return
+name|dataMap
+operator|.
+name|getName
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|visitEmbeddable
+parameter_list|(
+name|Embeddable
+name|embeddable
+parameter_list|)
+block|{
+return|return
+name|embeddable
+operator|.
+name|getClassName
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|visitObjEntity
+parameter_list|(
+name|ObjEntity
+name|entity
+parameter_list|)
+block|{
+return|return
+name|entity
+operator|.
+name|getName
+argument_list|()
+return|;
+block|}
+block|}
+decl_stmt|;
+end_decl_stmt
+
+unit|}
 end_unit
 
