@@ -109,6 +109,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|configuration
+operator|.
+name|ConfigurationNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|map
 operator|.
 name|DataMap
@@ -315,13 +329,13 @@ name|updateSelection
 parameter_list|(
 name|Predicate
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|predicate
 parameter_list|,
-name|List
+name|Collection
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|classes
 parameter_list|)
@@ -333,7 +347,7 @@ literal|false
 decl_stmt|;
 for|for
 control|(
-name|Object
+name|ConfigurationNode
 name|classObj
 range|:
 name|classes
@@ -549,9 +563,9 @@ name|Embeddable
 argument_list|>
 name|getSelectedEmbeddables
 parameter_list|(
-name|List
+name|Collection
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|classes
 parameter_list|)
@@ -633,9 +647,9 @@ name|ObjEntity
 argument_list|>
 name|getSelectedEntities
 parameter_list|(
-name|List
+name|Collection
 argument_list|<
-name|Object
+name|ConfigurationNode
 argument_list|>
 name|classes
 parameter_list|)
